Check 5: Use Case "Responds to job offers"